Correct collapse height; nicer easing; nicer overlay

--- a/styles/Layout.module.css
+++ b/styles/Layout.module.css
@@ -83,7 +83,7 @@
 .background {
   transform: skewY(var(--angle));
   transform-origin: center top;
-  transition: transform 400ms ease, box-shadow 0ms, background-image 400ms;
+  transition: transform 450ms cubic-bezier(0.2,0.1, 0.2,1), box-shadow 0ms, background-image 400ms;
   
   /* always fill parent block; block determines height */
   position: absolute;
@@ -105,8 +105,8 @@
   );
   --light-overlay: linear-gradient(
     to bottom,
-    rgba(255, 255, 255, 0.25),
-    rgba(255, 255, 255, 0.08)
+    rgba(255, 255, 255, 0.3),
+    rgba(0, 0, 0, 0.1)
   );
   --dark-overlay: linear-gradient(
     to bottom,
